syntax="proto3";

option csharp_namespace="ConsoleApplication.Messages";

message AddRequest {
    int32 firstValue = 1;
 	int32 secondValue = 2;
    
}
message SubRequest {
    int32 firstValue = 1;
 	int32 secondValue = 2;
    
}

message MathResponse{
 int32 result=1;
}



service CalculateService {
    rpc AddCalcRequest (AddRequest) returns (MathResponse);
    rpc SubCalcRequest (SubRequest) returns (MathResponse);
}